editor-components/slider/slider1/slider1.module.scss
/* ... */
@container (max-width: #{$composer-tablet-width}) {
    .container {
        .max-content {
            .slider-parent {
                .carousel {

                    :global(.slick-prev),
                    :global(.slick-next) {
                        width: var(--composer-gap-md);
                        height: var(--composer-gap-md);

                        &:before {
                            font-size: var(--composer-gap-md);
                        }
                    }

                    :global(.slick-prev) {
                        left: var(--composer-gap-lg);
                    }

                    :global(.slick-next) {
                        right: var(--composer-gap-lg);
                    }

                    .slider-item {
                        min-height: 70vh;
                        height: 100%;

                        .content {
                            padding: calc(var(--composer-gap-lg) * 2) var(--composer-gap-lg);

                            .socials {
                                right: var(--composer-gap-lg);

                                .icon {
                                    width: var(--composer-gap-lg);
                                    height: var(--composer-gap-lg);
                                    font-size: 1.5rem;

                                    &.has-image {
                                        width: 20px;
                                        height: 20px;
                                    }
                                }
                            }
                        }
                    }

                    &.has-socials {
                        .slider-item .content .box-parent {
                            padding-right: var(--composer-gap-lg);
                        }
                    }

                    &.has-arrows {
                        .slider-item .content {
                            .box-parent {
                                padding-left: var(--composer-gap-lg);
                                padding-right: 70px;
                            }

                            .socials {
                                right: calc(var(--composer-gap-lg) + 40px);
                            }
                        }
                    }
                }
            }

            .dots {
                .dot-item {
                    margin: 0 var(--composer-gap-xs);

                    .dot-button {
                        width: var(--composer-gap-sm) !important;
                        height: var(--composer-gap-sm) !important;
                        transform: scale(0.6);
                    }

                    &.active {
                        .dot-button {
                            transform: scale(1);
                        }
                    }
                }
            }
        }
    }
}

@container (max-width: #{$composer-phone-width}) {
    .container {
        .max-content {
            .slider-parent {
                .carousel {

                    :global(.slick-prev),
                    :global(.slick-next) {
                        width: 24px;
                        height: 24px;

                        &:before {
                            font-size: 24px;
                        }
                    }

                    :global(.slick-prev) {
                        left: var(--composer-gap-md);
                    }

                    :global(.slick-next) {
                        right: var(--composer-gap-md);
                    }

                    .slider-item {
                        min-height: 50vh;
                        height: 100%;

                        .content {
                            gap: var(--composer-gap-md);
                            padding: var(--composer-gap-xl) var(--composer-gap-md);

                            .socials {
                                .icon {
                                    font-size: 1.25rem;

                                    &.has-image {
                                        width: 15px;
                                        height: 15px;
                                    }
                                }
                            }
                        }
                    }

                    &.has-arrows {
                        .slider-item .content {
                            .box-parent {
                                padding-left: 30px;
                                padding-right: 50px;
                            }

                            .socials {
                                right: calc(var(--composer-gap-md) + 30px);
                            }
                        }
                    }
                }
            }
        }

        .dots {
            bottom: var(--composer-gap-md) !important;

            .dot-item {
                margin: 0 var(--composer-gap-xs) !important;

                .dot-button {
                    width: calc(var(--composer-gap-xs) + 2px) !important;
                    height: calc(var(--composer-gap-xs) + 2px) !important;
                }

                &.active {
                    .dot-button {
                        transform: scale(0.8) !important;
                    }
                }
            }
        }
    }
}

